--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.7.1",
-    "@slack/bolt": "^3.12.2"
+    "@slack/bolt": "^3.12.2",
+    "axios": "^1.2.1"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
