added new compileroption

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "strict": true,
         "outDir": "./dist"
     },
     "extends": "@tsconfig/node18/tsconfig.json"
