--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"axios": "^1.2.1"
 	},
 	"devDependencies": {
-		"@tsconfig/node18": "^1.0.1",
 		"dotenv": "^16.0.3",
+		"jest": "^29.5.0",
 		"prisma": "^4.7.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.9.3"
