--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 SLACK_BOT_TOKEN=
 SLACK_SIGNING_SECRET=
 SLACK_APP_TOKEN=
-PORT=6969
+PORT=3000
 
 GAMMA_API_TOKEN=
-GAMMA_URL=
+GAMMA_URL=http://localhost:8081
 
 DATABASE_URL=file:./db.sqlite
