--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,76 +1,14 @@
-version: "3"
+version: '3'
 services:
   bot:
     image: sob
     environment:
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
       - SLACK_SIGNING_SECRET=${SLACK_SIGNING_SECRET}
+      - SLACK_APP_TOKEN=${SLACK_APP_TOKEN}
       - PORT=3000
     build:
       context: sob
       dockerfile: Dockerfile
     ports:
       - ${PORT}:3000
-
-  gotify:
-    image: cthit/gotify
-    environment:
-      GOTIFY_PRE-SHARED-KEY: 123abc
-      GOTIFY_MOCK-MODE: "true"
-    ports:
-      - 1337:8080
-
-  ################## Gamma ##################
-  gamma-frontend:
-    image: cthit/gamma-frontend:development
-    environment:
-      HTTP_PROXY: http://gamma-backend:8081
-    depends_on:
-      - gamma-backend
-    ports:
-      - 3000:3000
-
-  gamma-backend:
-    image: cthit/gamma-backend:development
-    environment:
-      # Default admin user name = admin
-      # Default admin password  = password
-
-      DB_USER: user
-      DB_PASSWORD: password
-      DB_HOST: gamma-db
-      DB_PORT: 5432
-      DB_NAME: postgres
-
-      REDIS_HOST: gamma-redis
-      REDIS_PASSWORD: ""
-      REDIS_PORT: 6379
-
-      DEFAULT_CLIENT_NAME: demo
-      DEFAULT_CLIENT_ID: id
-      DEFAULT_CLIENT_SECRET: secret
-      DEFAULT_REDIRECT_URI: http://localhost:3001/auth/callback
-      DEFAULT_API_KEY: key
-
-      SERVER_PORT: 8081
-      SUCCESSFUL_LOGIN: http://localhost:3000
-      CORS_ALLOWED_ORIGIN: http://localhost:3000
-      BACKEND_URI: http://localhost:8081/api/
-      PRODUCTION: "false"
-      COOKIE_DOMAIN: localhost
-      IS_MOCKING: "true"
-    depends_on:
-      - gamma-redis
-      - gamma-db
-    ports:
-      - 8081:8081
-
-  gamma-redis:
-    image: redis:5.0
-
-  gamma-db:
-    image: postgres:10
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_DB: postgres
-      POSTGRES_PASSWORD: password
